--- a/(Hang)basic.html
+++ b/(Hang)basic.html
@@ -4,7 +4,7 @@
     <body>
         <script>
             let yourName = prompt("Hãy nhập tên của bạn");
-            alert("Xin chào" + " " + yourName);
+            document.write("Xin chào" + " " + yourName);
         </script>
     </body>
 </html>
