--- a/(Hang)dowhilesample.html
+++ b/(Hang)dowhilesample.html
@@ -6,7 +6,7 @@
     let value = null;
     do {
         value = parseInt(prompt("Nhập vào số từ 1 -> 10 "));
-    }   while (value > 1 || value < 10);
+    }   while (value < 1 || value > 10 );
         alert("Số bạn vừa nhập là " + value);
     </script>
 </body>
