--- a/(Hang)Thuc-hanh-for(2).html
+++ b/(Hang)Thuc-hanh-for(2).html
@@ -5,10 +5,10 @@
         <script>
             let num = parseInt(prompt("Enter your number: "));
             let total = 0;
-            for (i = 1;i <= num; i+=1) {
-                total += i;
+            for (i = 1; i <= num; i++) {
+                total = total + i;
                 alert(total);
-            }
+            } 
         </script>
     </body>
 </html>
