update bai tap cuoi ky

--- a/CASESTUDY/quanlysanpham1.html
+++ b/CASESTUDY/quanlysanpham1.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" type="text/css" href="style1.css" />
 </head>
 <body>
+    <div id="top"><strong>Mizukishop</strong>>Seller Center
+        <form action="quanlysanpham.html" method="post">
+        <div class="btn-box"><button type="submit">Đăng xuất</button></div>
+        </form>
+    </div>
+    
+   
+    <div id="banner"> <img src="image/banner.jpg" /></div>
+    
+    <div id="main">
     <h1>Add New Product</h1>
     <div id="div_input">
     <input type="text" id="addName" placeholder="New Product">&ensp;
@@ -22,6 +32,7 @@
     <h1>Display All Product</h1>
     <div id="result"></div>
     <!-- <div id="cart"></div> -->
+</div>
 </body>
 <script src="product.js"></script>
 <!-- <script src="hienthigiohang.js"></script> -->
