--- a/CASESTUDY/quanlysanpham.html
+++ b/CASESTUDY/quanlysanpham.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <form action="quanlysanpham1.html" method="post" onsubmit="return checkUser()">
-        <div id="top"><strong>Mizukishop</strong>>Home
-            <div class="input-box"><input id="username" type="text" placeholder="Nhập username"></div>
-            <div class="input-box"><input id="pass" type="password" placeholder="Nhập mật khẩu"> </div>
-            <div class="btn-box"><button type="submit">Đăng nhập</button></div>
-    </form>
-
+        <div id="top"><strong>Mizukishop</strong>>Seller Center>
+        <form action="quanlysanpham1.html" method="post" onsubmit="return checkUser()">
+        <div class="input-box"><input id="pass" type="password" placeholder="Nhập mật khẩu"> </div>
+        <div class="input-box"><input id="username" type="text" placeholder="Nhập username"></div>
+        <br>
+        <br>
+        <div class="btn-box"><button type="submit">Đăng nhập</button></div>
+        </form>
+        </div>
 
     <div id="banner"> <img src="image/banner.jpg" /></div>
 
